# modelcontextprotocol-cpp-sdk

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_zh.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
cmake/: BuildOptimization.cmake  Cache.cmake  CompilerOptions.cmake  FetchDependencies.cmake  InstallRules.cmake  Lto.cmake  Platform.cmake
docs/: getting-started.md  index.md  package.json
docs/.vitepress/: config.mts
docs/client/: overview.md
docs/en/: index.md
docs/en/advanced/: mrtr.md  protocol-versions.md
docs/en/client/: oauth.md  overview.md
docs/en/examples/: echo-server.md  weather-server.md
docs/en/guide/: architecture.md  installation.md  quick-start.md  transports.md  what-is-mcp.md
docs/en/server/: elicitation.md  extensions.md  overview.md  prompts.md  resources.md  tools.md
docs/examples/: echo-server.md
docs/guide/: what-is-mcp.md
docs/server/: extensions.md
docs/zh/: index.md
docs/zh/advanced/: mrtr.md  protocol-versions.md
docs/zh/client/: oauth.md  overview.md
docs/zh/examples/: echo-server.md  weather-server.md
docs/zh/guide/: architecture.md  installation.md  quick-start.md  transports.md  what-is-mcp.md
docs/zh/server/: elicitation.md  extensions.md  overview.md  prompts.md  resources.md  tools.md
examples/: CMakeLists.txt
examples/EchoServer/: CMakeLists.txt  main.cpp
examples/SimpleClient/: CMakeLists.txt  main.cpp
examples/WeatherServer/: CMakeLists.txt  main.cpp
include/mcp/: Capabilities.hpp  Content.hpp  ErrorCodes.hpp  Export.hpp  Headers.hpp  Implementation.hpp  JsonRpc.hpp  JsonValue.hpp  Log.hpp  McpCore.hpp  McpError.hpp  McpTypes.hpp  Meta.hpp  Methods.hpp  Notifications.hpp  Progress.hpp  Prompt.hpp  Protocol.hpp  ProtocolVersion.hpp  Resource.hpp  Result.hpp  Tool.hpp  Transport.hpp
include/mcp/client/: ClientHandlers.hpp  ClientOptions.hpp  McpClient.hpp  McpClientTool.hpp  MrtrHelper.hpp  VersionNegotiation.hpp
include/mcp/client/auth/: ClientOAuthOptions.hpp  OAuthClientProvider.hpp  TokenCache.hpp
include/mcp/detail/: sha256.hpp
include/mcp/http/: EventStore.hpp  HttpServer.hpp
include/mcp/protocol/: ICacheableResult.hpp  IncomingRequestMeta.hpp  McpSession.hpp  McpSessionHandler.hpp  MessageChannel.hpp  MessageFilter.hpp  Protocol.hpp  WireCodec.hpp  XMcpHeaders.hpp
include/mcp/server/: Extension.hpp  McpServer.hpp  McpServerTool.hpp  McpTaskStore.hpp  RequestContext.hpp  ServerHandlers.hpp  ServerOptions.hpp
include/mcp/storage/: FileTaskStore.hpp  FileTokenCache.hpp
include/mcp/transport/: HttpTransportMode.hpp  InMemoryTransport.hpp  SseClientTransport.hpp  StdioClientTransport.hpp  StdioServerTransport.hpp  StreamableHttpClientTransport.hpp  StreamableHttpServerTransport.hpp  Transport.hpp  WebSocketClientTransport.hpp
include/mcp/transport/detail/: PlatformIO.hpp  Url.hpp  http_client.hpp
src/client/: FileTokenCache.cpp  McpClient.cpp  MrtrHelper.cpp
src/client/auth/: OAuthClientProvider.cpp
src/core/: Capabilities.cpp  Content.cpp  JsonRpc.cpp  JsonValue.cpp  McpTypes.cpp
src/detail/: JsonSerialize_fwd.hpp  JsonSerializer.hpp
src/http/: EventStore.cpp  HttpServer.cpp  StreamableHttpClientTransport.cpp  StreamableHttpServerTransport.cpp
src/protocol/: ClientResponseCache.cpp  McpSessionHandler.cpp  Protocol.cpp  WireCodec.cpp
src/server/: FileTaskStore.cpp  McpServer.cpp  McpServerTool.cpp
src/transport/: InMemoryTransport.cpp  SseClientTransport.cpp  StdioClientTransport.cpp  StdioServerTransport.cpp  StreamableHttpServerTransport.cpp  WebSocketClientTransport.cpp
src/transport/detail/: http_client.hpp  posix_platform.cpp  win32_platform.cpp
tests/: CMakeLists.txt
tests/conformance/: CMakeLists.txt  ProtocolConformance.cpp
tests/integration/: CMakeLists.txt  ClientServerRoundTrip.cpp
tests/unit/: CMakeLists.txt  HttpServerTests.cpp  JsonRpcTests.cpp  McpClientTests.cpp  McpServerTests.cpp  McpTypesTests.cpp  OAuthTests.cpp  TransportTests.cpp  WireCodecTests.cpp
